--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,14 +4,17 @@
   background: #f5f4fa;
 }
 .team__list {
+  padding-top: 30px;
   @media screen and (max-width: 767px) {
   }
   @media screen and (min-width: $tablet) {
     display: flex;
     flex-wrap: wrap;
+    margin: -15px;
   }
 
   @media screen and (min-width: $decstop) {
+    margin: -15px;
   }
 }
 .team__title {
@@ -19,13 +22,27 @@
   font-size: 36px;
   line-height: 1.2;
   text-align: center;
-  padding-bottom: 50px;
+  // padding-bottom: 50px;
   color: $title-text-color;
 }
 
-.team__item:not(:first-child) {
-  margin-left: 30px;
+.team__item {
+  @media screen and (max-width: 767px) {
+    // margin-top: 30px;
+  }
+  @media screen and (min-width: $tablet) {
+    margin: 15px;
+    width: calc((100% - 2 * 30px) / 2);
+  }
+
+  @media screen and (min-width: $decstop) {
+    width: calc((100% - 4 * 30px) / 4);
+    margin: 15px;
+  }
 }
+// .team__item:not(:first-child) {
+//   margin-left: 30px;
+// }
 .team__card {
   text-decoration: none;
   display: block;
@@ -37,7 +54,16 @@
 }
 
 .team__img {
-  width: 270px;
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+  @media screen and (min-width: $tablet) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: $decstop) {
+    width: 270px;
+  }
 }
 .team__content {
   padding: 30px 0px;
@@ -49,7 +75,8 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
-  color: title-text-color;
+  letter-spacing: 0.03em;
+  color: $title-text-color;
 }
 .team__position {
   font-weight: normal;
@@ -58,6 +85,7 @@
 }
 .social {
   display: flex;
+  justify-content: center;
 
   padding-left: 32px;
   padding-right: 32px;
