--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -38,6 +38,7 @@
   }
 
   @media screen and (min-width: $decstop) {
+    display: block;
     padding-top: 94px;
     padding-bottom: 94px;
     &--no-padding {
