--- a/sass/components/_options.scss
+++ b/sass/components/_options.scss
@@ -8,18 +8,18 @@
   color: $title-text-color;
 
   @media screen and (max-width: 767px) {
-    display: none;
+    // display: none;
   }
   @media screen and (min-width: $tablet) {
-    display: none;
+    // display: none;
   }
 }
 .options {
   @media screen and (max-width: 767px) {
-    display: none;
+    // display: none;
   }
   @media screen and (min-width: $tablet) {
-    display: none;
+    // display: none;
   }
 
   @media screen and (min-width: $decstop) {
