--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,7 +4,6 @@
   background: #f5f4fa;
 }
 .team__list {
-  padding-top: 30px;
   @media screen and (max-width: 767px) {
   }
   @media screen and (min-width: $tablet) {
@@ -22,8 +21,16 @@
   font-size: 36px;
   line-height: 1.2;
   text-align: center;
-  // padding-bottom: 50px;
+  padding-bottom: 30px;
   color: $title-text-color;
+  @media screen and (max-width: 767px) {
+  }
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+    padding-bottom: 50px;
+  }
 }
 
 .team__item {
