--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -17,11 +17,12 @@
   }
 }
 .team__title {
+  outline: 2px solid red;
   font-weight: bold;
   font-size: 36px;
   line-height: 1.2;
   text-align: center;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   color: $title-text-color;
   @media screen and (max-width: 767px) {
   }
@@ -29,13 +30,15 @@
   }
 
   @media screen and (min-width: $decstop) {
-    padding-bottom: 50px;
+    margin-bottom: 50px;
   }
 }
 
 .team__item {
   @media screen and (max-width: 767px) {
-    // margin-top: 30px;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
   @media screen and (min-width: $tablet) {
     margin: 15px;
