--- a/sass/components/_footer-contact.scss
+++ b/sass/components/_footer-contact.scss
@@ -1,3 +1,5 @@
+.address {
+}
 .footer-contact {
   font-style: normal;
   font-weight: normal;
@@ -9,16 +11,15 @@
   padding-bottom: 9px;
 }
 .footer-contact__link {
-  
   color: rgba(255, 255, 255, 0.6);
   transition: color $timing-fm;
 
-&:focus {
-  outline: none;
-  border-radius: 4px;
-  color: $accent-color;
- }
-&:hover {
-  color: $accent-color;
- }
+  &:focus {
+    outline: none;
+    border-radius: 4px;
+    color: $accent-color;
+  }
+  &:hover {
+    color: $accent-color;
+  }
 }
