--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,15 +5,28 @@
 }
 
 .footer__flex {
-  display: flex;
-  justify-content: space-between;
+  @media screen and (max-width: 767px) {
+  }
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .footer__one-section {
   padding: 60px 0;
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .footer__two-section {
   padding: 72px 0;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 .footer__content {
   display: inline-block;
@@ -41,21 +54,21 @@
   transition: fill 250ms var(--timing-fm),
     background-color 250ms var(--timing-fm);
 
-&:focus {
-  outline: none;
-  box-shadow: 0 0 0 1px $accent-color;
-  background-color: $accent-color;
-  border-radius: 50%;
-  width: 44px;
-  height: 44px;
-}
-&:hover {
-  background-color: $accent-color;
-  fill: currentColor;
-  border-radius: 50%;
-  width: 44px;
-  height: 44px;
-}
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 1px $accent-color;
+    background-color: $accent-color;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+  }
+  &:hover {
+    background-color: $accent-color;
+    fill: currentColor;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+  }
 }
 .footer-social__item:not(:first-child) {
   margin-left: 10px;
@@ -69,6 +82,9 @@
   display: flex;
   flex-direction: column;
   padding: 72px 0;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 .footer__input {
   width: 358px;
@@ -85,11 +101,11 @@
   border-radius: 4px;
   transition: border var(--timing-fm);
 
-&::placeholder {
-  font-size: 16px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
+  &::placeholder {
+    font-size: 16px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
 
-  color: rgba(255, 255, 255, 0.6);
-}
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
