--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -19,11 +19,11 @@
   background: $accent-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-&:focus {
-  outline: none;
-  box-shadow: 0 0 0 1px $accent-color;
-  border-radius: 4px;
- }
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 1px $accent-color;
+    border-radius: 4px;
+  }
 }
 .button-secondary {
   min-width: 78px;
@@ -35,23 +35,23 @@
   background-color: $secondary-btn-bg;
   border-radius: 4px;
   color: $title-text-color;
-  transition: color  $timing-fm,
-    background-color $timing-fm, box-shadow $timing-fm;
- &:focus {
-  outline: none;
-  box-shadow: 0 0 0 1px $accent-color;
-  border-radius: 4px;
-  color: $primery-white-color;
-  background-color: $accent-color;
- }
+  transition: color $timing-fm, background-color $timing-fm,
+    box-shadow $timing-fm;
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 1px $accent-color;
+    border-radius: 4px;
+    color: $primery-white-color;
+    background-color: $accent-color;
+  }
 
- &:hover {
-  color: $primery-white-color;
-  background-color: $accent-color;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
- }
+  &:hover {
+    color: $primery-white-color;
+    background-color: $accent-color;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+  }
 }
 
 .button-third {
@@ -68,19 +68,18 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
-&:hover,
- {
-  background-color: $modal-btn-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
-&:focus {
-  outline: none;
-  background-color: $modal-btn-color;
-  color: $primery-white-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
+  &:hover {
+    background-color: $modal-btn-color;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+  }
+  &:focus {
+    outline: none;
+    background-color: $modal-btn-color;
+    color: $primery-white-color;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+  }
 }
 .button-fourth {
   min-width: 200px;
@@ -95,15 +94,24 @@
   letter-spacing: 0.06em;
   color: $primery-white-color;
   background: $accent-color;
- 
+
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  
-&:focus {
-  outline: none;
-  box-shadow: 0 0 0 1px $accent-color;
-  border-radius: 4px;
- }
+  @media screen and (max-width: 767px) {
+    margin-top: 20px;
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 1px $accent-color;
+    border-radius: 4px;
+  }
 }
 .button-fourth {
   position: relative;
@@ -144,14 +152,14 @@
   background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
- &:hover {
-  outline: none;
-  fill: $accent-color;
- }
-&:focus {
-  outline: none;
-  box-shadow: 0 0 0 1px $accent-color;
-  border-radius: 50%;
-  fill: $accent-color;
- }
+  &:hover {
+    outline: none;
+    fill: $accent-color;
+  }
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 1px $accent-color;
+    border-radius: 50%;
+    fill: $accent-color;
+  }
 }
