--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,6 +2,16 @@
 .footer {
   background-color: $header-footer-fon;
   color: $primery-white-color;
+
+  @media screen and (max-width: 767px) {
+    padding: 60px 0;
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
 }
 
 .footer__flex {
@@ -16,16 +26,35 @@
   }
 }
 .footer__one-section {
-  padding: 60px 0;
+  outline: 1px solid red;
+
   @media screen and (max-width: 767px) {
     text-align: center;
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+    padding: 60px 0;
+    display: flex;
+    justify-content: space-between;
   }
 }
 
 .footer__two-section {
-  padding: 72px 0;
+  outline: 1px solid red;
   @media screen and (max-width: 767px) {
-    display: none;
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+    padding: 72px 0;
   }
 }
 .footer__content {
@@ -41,6 +70,16 @@
 
 .footer-social {
   display: flex;
+
+  @media screen and (max-width: 767px) {
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
 }
 .footer-social__link {
   display: flex;
@@ -81,9 +120,17 @@
 .footer__three-section {
   display: flex;
   flex-direction: column;
-  padding: 72px 0;
+
+  outline: 1px solid red;
   @media screen and (max-width: 767px) {
-    display: none;
+    text-align: center;
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+    padding: 72px 0;
   }
 }
 .footer__input {
