--- a/css/main.css
+++ b/css/main.css
@@ -705,6 +705,14 @@ li {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .button-fourth {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .button-fourth:focus {
   outline: none;
   -webkit-box-shadow: 0 0 0 1px #2196f3;
@@ -1003,27 +1011,15 @@ li {
   display: block;
   text-decoration: none;
   font-weight: bold;
+  font-size: 24px;
+  line-height: 1.166;
+  letter-spacing: 0.03em;
   color: #000000;
   font-family: 'Raleway', sans-serif;
 }
 
-@media screen and (max-width: 767px) {
-  .logo {
-    font-size: 24px;
-    line-height: 1.166;
-    letter-spacing: 0.03em;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .logo {
-    margin-right: 88px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .logo {
-    margin-right: 93px;
     font-size: 26px;
     line-height: 1.2;
   }
@@ -1045,6 +1041,7 @@ li {
 
 @media screen and (min-width: 768px) {
   .logo--indent {
+    margin-right: 88px;
     padding-top: 24px;
     padding-bottom: 24px;
   }
@@ -1052,6 +1049,7 @@ li {
 
 @media screen and (min-width: 1200px) {
   .logo--indent {
+    margin-right: 93px;
     padding-top: 24px;
     padding-bottom: 24px;
   }
@@ -1295,7 +1293,6 @@ li {
   padding-bottom: 27px;
   color: #ffffff;
   background-color: rgba(47, 48, 58, 0.8);
-  opacity: 0.8;
 }
 
 .options__text {
@@ -1664,11 +1661,38 @@ li {
 .footer {
   background-color: #2f303a;
   color: #ffffff;
+  text-align: center;
 }
 
 @media screen and (max-width: 767px) {
   .footer {
     padding: 60px 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    padding: 60px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer {
+    padding: 0;
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
@@ -1689,20 +1713,20 @@ li {
 
 @media screen and (max-width: 767px) {
   .footer__one-section {
-    text-align: center;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__one-section {
     margin-bottom: 60px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .footer__one-section {
+    margin: 0;
     padding: 60px 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
   }
 }
 
@@ -1717,8 +1741,16 @@ li {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .footer__two-section {
+    padding-top: 5px;
+    margin-bottom: 60px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer__two-section {
+    margin: 0;
     padding: 72px 0;
   }
 }
@@ -1797,13 +1829,6 @@ li {
 }
 
 .footer__three-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   outline: 1px solid red;
 }
 
@@ -1813,14 +1838,40 @@ li {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .footer__three-section {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer__three-section {
     padding: 72px 0;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    display: block;
   }
 }
 
 .footer__input {
-  width: 358px;
   padding: 15px 16px;
   font-size: 16px;
   line-height: 1.2;
@@ -1861,5 +1912,23 @@ li {
   line-height: 1.2;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (max-width: 767px) {
+  .footer__input {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__input {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__input {
+    width: 358px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
