--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -102,6 +102,9 @@
   }
 
   @media screen and (min-width: $tablet) {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   @media screen and (min-width: $decstop) {
