--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,15 +2,18 @@
 .footer {
   background-color: $header-footer-fon;
   color: $primery-white-color;
-
+  text-align: center;
   @media screen and (max-width: 767px) {
     padding: 60px 0;
   }
 
   @media screen and (min-width: $tablet) {
+    padding: 60px 0;
   }
 
   @media screen and (min-width: $decstop) {
+    padding: 0;
+    text-align: start;
   }
 }
 
@@ -18,6 +21,9 @@
   @media screen and (max-width: 767px) {
   }
   @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   @media screen and (min-width: $decstop) {
@@ -29,17 +35,18 @@
   outline: 1px solid red;
 
   @media screen and (max-width: 767px) {
-    text-align: center;
+    // text-align: center;
     margin-bottom: 60px;
   }
 
   @media screen and (min-width: $tablet) {
+    // text-align: center;
+    margin-bottom: 60px;
   }
 
   @media screen and (min-width: $decstop) {
+    margin: 0;
     padding: 60px 0;
-    display: flex;
-    justify-content: space-between;
   }
 }
 
@@ -51,9 +58,12 @@
   }
 
   @media screen and (min-width: $tablet) {
+    padding-top: 5px;
+    margin-bottom: 60px;
   }
 
   @media screen and (min-width: $decstop) {
+    margin: 0;
     padding: 72px 0;
   }
 }
@@ -118,23 +128,37 @@
   fill: #ffffff;
 }
 .footer__three-section {
-  display: flex;
-  flex-direction: column;
-
   outline: 1px solid red;
   @media screen and (max-width: 767px) {
     text-align: center;
   }
 
   @media screen and (min-width: $tablet) {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   @media screen and (min-width: $decstop) {
+    // flex-direction: column;
     padding: 72px 0;
+    margin: 0;
+  }
+}
+.footer-form {
+  @media screen and (max-width: 767px) {
+  }
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-direction: column;
+    min-width: 450px;
+  }
+
+  @media screen and (min-width: $decstop) {
+    display: block;
   }
 }
 .footer__input {
-  width: 358px;
   padding: 15px 16px;
   font-size: 16px;
   line-height: 1.2;
@@ -154,5 +178,16 @@
     letter-spacing: 0.03em;
 
     color: rgba(255, 255, 255, 0.6);
+  }
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: $decstop) {
+    width: 358px;
   }
 }
