--- a/sass/components/_options.scss
+++ b/sass/components/_options.scss
@@ -42,7 +42,7 @@
   padding-bottom: 27px;
   color: #ffffff;
   background-color: rgba(47, 48, 58, 0.8);
-  opacity: 0.8;
+  // opacity: 0.8;
 }
 .options__text {
   font-weight: bold;
