--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -1,32 +1,54 @@
 .member {
-  
   display: flex;
-  flex-wrap: wrap;
 
-  margin-left: -30px;
-  margin-top: -30px;
-  padding-top: 20px;
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: $tablet) {
+    margin-left: -30px;
+    margin-top: -30px;
+    padding-top: 20px;
+    flex-wrap: wrap;
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
 }
 .member > .member-card__item {
-  flex-basis: calc(100% / 3 - #{$set-gap});
-  margin-left: $set-gap;
-  margin-top: $set-gap;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: $tablet) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: $set-gap;
+    margin-top: $set-gap;
+  }
+
+  @media screen and (min-width: $decstop) {
+    flex-basis: calc(100% / 3 - #{$set-gap});
+    margin-left: $set-gap;
+    margin-top: $set-gap;
+  }
 }
 .member-card__item {
   display: block;
 
-&:hover .overlay {
-  transform: translateY(0);
-}
-&:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-&:focus {
-  outline: none;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+  &:hover .overlay {
+    transform: translateY(0);
+  }
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  &:focus {
+    outline: none;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 .member-card__thumb {
   position: relative;
@@ -47,7 +69,7 @@
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0.9;
   transform: translateY(100%);
-  transition: transform  $timing-fm;
+  transition: transform $timing-fm;
 }
 .card-content__title {
   color: $title-text-color;
@@ -73,7 +95,6 @@
 //     0px 2px 1px rgba(0, 0, 0, 0.2);
 //   border-radius: 0px 0px 4px 4px;
 // }
-
 
 .card-content {
   padding: 20px 24px;
