--- a/css/main.css
+++ b/css/main.css
@@ -1467,7 +1467,25 @@ li {
 
 /*BLOCK фильтр по кнопкам*/
 .filterbox {
-  padding-bottom: 20px;
+  outline: 2px solid red;
+}
+
+@media screen and (max-width: 767px) {
+  .filterbox {
+    margin-bottom: 25px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filterbox {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filterbox {
+    margin-bottom: 50px;
+  }
 }
 
 .filter {
@@ -1494,14 +1512,14 @@ li {
 }
 
 @media screen and (max-width: 767px) {
-  .filter__item:not(:last-child) {
+  .filter__item {
     margin-bottom: 15px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .filter__item:not(:last-child) {
-    margin-bottom: 0;
+  .filter__item {
+    margin: 0;
   }
 }
 
@@ -1604,7 +1622,6 @@ li {
   .member {
     margin-left: -30px;
     margin-top: -30px;
-    padding-top: 20px;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
