--- a/css/main.css
+++ b/css/main.css
@@ -556,6 +556,34 @@ li {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .envelope {
+    width: 14px;
+    height: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .envelope {
+    width: 16px;
+    height: 12px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile {
+    width: 10px;
+    height: 14px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .mobile {
+    width: 10px;
+    height: 16px;
+  }
+}
+
 .footer-contact {
   font-style: normal;
   font-weight: normal;
