--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -6,8 +6,9 @@
   }
 
   @media screen and (min-width: $tablet) {
-    margin-left: -30px;
-    margin-top: -30px;
+    // margin-left: -30px;
+    // margin-top: -30px;
+    margin: -15px;
 
     flex-wrap: wrap;
   }
@@ -16,6 +17,8 @@
   }
 }
 .member > .member-card__item {
+  border: 1px solid #eeeeee;
+
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 30px;
@@ -23,9 +26,13 @@
   }
 
   @media screen and (min-width: $tablet) {
-    flex-basis: calc(100% / 2 - 30px);
-    margin-left: $set-gap;
+    flex-basis: calc(100% / 2 - #{$set-gap});
+    margin-left: 30px;
+
     margin-top: $set-gap;
+    margin-bottom: 30px;
+    // flex-basis: calc((100% - 2 * 30px) / 2);
+    // margin: 15px;
   }
 
   @media screen and (min-width: $decstop) {
@@ -35,8 +42,6 @@
   }
 }
 .member-card__item {
-  display: block;
-
   &:hover .overlay {
     transform: translateY(0);
   }
@@ -50,9 +55,27 @@
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
+.member-card__link {
+}
 .member-card__thumb {
   position: relative;
   overflow: hidden;
+  // height: 294px;
+  border-radius: 4px;
+
+  @media screen and (max-width: 767px) {
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
+}
+.member-card__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .overlay {
   position: absolute;
@@ -71,6 +94,18 @@
   transform: translateY(100%);
   transition: transform $timing-fm;
 }
+
+.card-content {
+  @media screen and (max-width: 767px) {
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
+}
+
 .card-content__title {
   color: $title-text-color;
   font-weight: bold;
@@ -98,7 +133,8 @@
 
 .card-content {
   padding: 20px 24px;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
+
+  // border-bottom: 1px solid #eeeeee;
+  // border-left: 1px solid #eeeeee;
+  // border-right: 1px solid #eeeeee;
 }
