--- a/css/main.css
+++ b/css/main.css
@@ -1485,21 +1485,32 @@ li {
 
 .team__thumb {
   overflow: hidden;
-  height: 294px;
   border-radius: 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .team__thumb {
+    max-height: 460px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team__thumb {
+    max-height: 374px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__thumb {
+    max-height: 260px;
+  }
 }
 
 .team__img {
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
   width: 100%;
-}
-
-@media screen and (min-width: 1200px) {
-  .team__img {
-    width: 270px;
-  }
 }
 
 .team__content {
