--- a/css/main.css
+++ b/css/main.css
@@ -370,19 +370,20 @@ li {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    min-width: 320px;
+    max-width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -834,8 +835,6 @@ li {
   padding-bottom: 40px;
   padding-left: 39px;
   padding-right: 41px;
-  min-width: 528px;
-  min-height: 581px;
   text-align: center;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -843,6 +842,13 @@ li {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .signup__headline {
@@ -1743,7 +1749,8 @@ li {
 
 @media screen and (min-width: 768px) {
   .member {
-    margin: -15px;
+    margin-left: -30px;
+    margin-top: -30px;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
@@ -1797,6 +1804,7 @@ li {
 .member-card__thumb {
   position: relative;
   overflow: hidden;
+  height: 294px;
   border-radius: 4px;
 }
 
@@ -1811,7 +1819,6 @@ li {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 63px 24px;
   width: 100%;
   height: 100%;
   font-weight: normal;
@@ -1827,6 +1834,24 @@ li {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .overlay {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .overlay {
+    padding: 49px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .overlay {
+    padding: 63px 24px;
+  }
 }
 
 .card-content__title {
