--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -4,24 +4,18 @@
   margin: 0 auto;
 
   @media screen and (min-width: $mobile) {
-    width: 480px;
+    min-width: 320px;
+    max-width: 480px;
   }
   @media screen and (min-width: $tablet) {
-    width: 768px;
+    max-width: 768px;
   }
 
   @media screen and (min-width: $decstop) {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
-// .container {
-//   width: 1200px;
-
-//   padding-left: 15px;
-//   padding-right: 15px;
-//   margin: 0 auto;
-// }
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
