--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,14 +24,26 @@
   padding-bottom: 40px;
   padding-left: 39px;
   padding-right: 41px;
-  min-width: 528px;
-  min-height: 581px;
+
   text-align: center;
   transform: translate(-50%, -50%);
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  @media screen and (max-width: 767px) {
+  }
+
+  @media screen and (min-width: $tablet) {
+    min-width: 528px;
+    min-height: 581px;
+  }
+
+  @media screen and (min-width: $decstop) {
+    // min-width: 528px;
+    // min-height: 581px;
+  }
 }
 
 .signup__headline {
