--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -6,9 +6,8 @@
   }
 
   @media screen and (min-width: $tablet) {
-    // margin-left: -30px;
-    // margin-top: -30px;
-    margin: -15px;
+    margin-left: -30px;
+    margin-top: -30px;
 
     flex-wrap: wrap;
   }
@@ -31,8 +30,6 @@
 
     margin-top: $set-gap;
     margin-bottom: 30px;
-    // flex-basis: calc((100% - 2 * 30px) / 2);
-    // margin: 15px;
   }
 
   @media screen and (min-width: $decstop) {
@@ -60,7 +57,7 @@
 .member-card__thumb {
   position: relative;
   overflow: hidden;
-  // height: 294px;
+  height: 294px;
   border-radius: 4px;
 
   @media screen and (max-width: 767px) {
@@ -81,7 +78,18 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 63px 24px;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
+  @media screen and (min-width: $tablet) {
+    padding: 49px 24px;
+  }
+
+  @media screen and (min-width: $decstop) {
+    padding: 63px 24px;
+  }
   width: 100%;
   height: 100%;
   font-weight: normal;
