--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -8,6 +8,10 @@
   color: $title-text-color;
 
   @media screen and (max-width: 767px) {
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 1.178;
+    letter-spacing: 0.03em;
   }
   @media screen and (min-width: $tablet) {
   }
