--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -17,7 +17,6 @@
   }
 }
 .team__title {
-  outline: 2px solid red;
   font-weight: bold;
   font-size: 36px;
   line-height: 1.2;
@@ -25,6 +24,10 @@
   margin-bottom: 30px;
   color: $title-text-color;
   @media screen and (max-width: 767px) {
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 1.178;
+    letter-spacing: 0.03em;
   }
   @media screen and (min-width: $tablet) {
   }
