--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,6 +8,7 @@
   opacity: 1;
   visibility: visible;
   transition: opacity $timing-fm, visibility $timing-fm;
+  z-index: 9999;
 }
 .is-hidden {
   visibility: hidden;
