--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -30,7 +30,7 @@ Use a more readable tab size (opinionated).
 */
 
 html {
-  line-height: 1.15; /* 1 */
+  // line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
@@ -204,9 +204,9 @@ textarea {
 Normalize li item
 */
 
- li {
-   font-style: normal;
- }
+li {
+  font-style: normal;
+}
 
 /**
 Remove the inheritance of text transform in Edge and Firefox.
