--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -14,6 +14,10 @@
 }
 
 .features__item {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
   @media screen and (min-width: $mobile) {
     width: 100%;
   }
@@ -61,12 +65,20 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: $title-text-color;
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
+  @media screen and (min-width: $tablet) {
+    text-align: start;
+  }
+  @media screen and (min-width: $decstop) {
+  }
 }
 .features__text {
   @media screen and (min-width: $decstop) {
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+    // font-size: 14px;
+    // line-height: 1.71;
+    // letter-spacing: 0.03em;
   }
 }
